--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
-        versionName '20210720'
+        versionName '20210722'
     }
     compileOptions {
         sourceCompatibility 1.8
@@ -29,6 +29,8 @@ android {
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.android.material:material:1.4.0'
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.3.1' // ViewModel
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.1' // LiveData
 }
